[package]
name = "spreadsheet"
version = "0.1.0"
authors = ["Oliver Scherer <github@oli-obk.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }

dioxus = { version = "=0.6.0-alpha.3", features = [
    "liveview",
    "axum",
    "router",
    "desktop",
] }
axum = { version = "0.7.4", features = ["ws"] }

# Debug
dioxus-logger = "0.5.1"
