[package]
name = "spreadsheet"
version = "0.1.0"
authors = ["Oliver Scherer <github@oli-obk.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.6.0-alpha.3", features = [
    "router",
], default-features = false }


# Debug
dioxus-logger = "0.5.1"


[target.'cfg(target_family = "wasm")'.dependencies.dioxus]
version = "=0.6.0-alpha.3"
features = ["web"]

[target.'cfg(any(target_family = "windows", target_family = "unix"))'.dependencies.dioxus]
version = "=0.6.0-alpha.3"
features = ["desktop", "axum", "liveview"]

[target.'cfg(target_family = "wasm")'.dependencies]
# HACK: get compilation to work
getrandom = { version = "0.2", features = ["js"] }
