[package]
name = "lang"
version = "0.1.0"
edition = "2021"

[dependencies]
# chumsky = { version = "1.0.0-alpha.7", features = ["extension"] }
chumsky = { git = "https://github.com/jyn514/chumsky", rev = "a43a0dfe7a44de064b5dc4db15facc26e3009c37", version = "1.0.0-alpha.7", features = ["extension"] }
# rowan = "0.15.16"
cstree = { git = "https://github.com/jyn514/cstree", rev = "6116e41806e7fce57e1cc078c19d117c3e0b5075", version = "0.12" }

[dev-dependencies]
ctrlc = "3.4.5"
serde_json = "1.0.128"
ui_test = "0.27.1"
xshell = "0.2.6"
cargo_metadata = "0.18.1"

[[test]]
name = "ui_test"
harness = false
